# jacket-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  color_parser.py  config.example.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml  terraform.yml
iac/: README.md  backend.tf  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
iac/backend/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: logs.sh  test-live.sh
tests/: __init__.py  conftest.py  test_app.py  test_color_parser.py  test_platforms.py
tests/integration/: __init__.py  conftest.py  test_api_flow.py  test_docker.py  test_live_platforms.py
